--- a/company.html
+++ b/company.html
@@ -165,7 +165,7 @@
   <div class="team-grid">
 <!-- Virgil -->
 <article class="team-card" 
-        data-name="Virgil Prewitt" 
+        data-name="Virg" 
         data-role="Enterprise Architect, Cloud Architectures" 
         data-bio="Enterprise Architect specializing in cloud architectures and engineering transformative software solutions that drive business growth, scalability, and innovation.">
   <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
@@ -181,7 +181,7 @@
 
 <!-- Chet -->
 <article class="team-card" 
-        data-name="Chet Patel" 
+        data-name="Chet" 
         data-role="CRM Expert, Business Transformations, MCTS, MCP CRM Engineer, PMP" 
         data-bio="CRM expert specializing in business transformations, leading Dynamics/HubSpot/Salesforce architecture, data modeling, and workflow automation to deliver scalable and impactful solutions.">
   <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
@@ -197,7 +197,7 @@
 
     <!-- Ted -->
     <article class="team-card" 
-            data-name="Ted Klingenberg" 
+            data-name="Ted" 
             data-role="UI/UX Design, Web & Mobile Development" 
             data-bio="UI designer and front-end developer specializing in intuitive interfaces, responsive web and mobile applications, and creating seamless user experiences for both internal and external customers.">
       <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
@@ -214,7 +214,7 @@
 
 <!-- Eric -->
 <article class="team-card" 
-        data-name="Eric Prewitt" 
+        data-name="Eric" 
         data-role="UI Developer, Transformative User Experience" 
         data-bio="Front-end specialist creating responsive, accessible, and high-performance interfaces, with a focus on delivering transformative user experiences across web and mobile platforms.">
   <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
@@ -228,36 +228,38 @@
 </article>
 
 
-    <!-- Candace -->
-    <article class="team-card" 
-            data-name="Candace Prewitt" 
-            data-role="PMP, Project Management Professional" 
-            data-bio="Certified PMP specializing in project leadership, scope management, scheduling, and stakeholder communication to ensure successful delivery of enterprise initiatives.">
-      <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-        <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-          <img src="assets/candaceprewitt.jpg" alt="Candace Prewitt" 
-              style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-        </div>
-        <h3>Candace Prewitt</h3>
-        <p class="text-muted" style="color:#d4ddee;">PMP</p>
-      </div>
-    </article>
+<!-- Candace -->
+<article class="team-card" 
+        data-name="Candace" 
+        data-role="PMP, Project Management Professional, Quality Assurance" 
+        data-bio="Certified PMP specializing in project leadership, scope management, scheduling, and stakeholder communication to ensure successful delivery of enterprise initiatives. She also brings a focus on quality assurance to maintain high standards across all deliverables.">
+  <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+    <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+      <img src="assets/candaceprewitt.jpg" alt="Candace Prewitt" 
+          style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+    </div>
+    <h3>Candace Prewitt</h3>
+    <p class="text-muted" style="color:#d4ddee;">PMP / Quality Assurance</p>
+  </div>
+</article>
 
 
-    <!-- Emily -->
-    <article class="team-card" 
-            data-name="Emily Raines" 
-            data-role="Business Analyst" 
-            data-bio="Business Analyst focused on process improvement, requirements gathering, and delivering data-driven solutions.">
-      <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-        <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-          <img src="assets/emily.jpg" alt="Emily Raines" 
-              style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-        </div>
-        <h3>Emily Raines</h3>
-        <p class="text-muted" style="color:#d4ddee;">Business Analyst</p>
-      </div>
-    </article>
+
+<!-- Emily -->
+<article class="team-card" 
+        data-name="Emily Raines" 
+        data-role="Customer Solutions Analyst" 
+        data-bio="Customer Solutions Analyst serving as the liaison between clients and the development team. She specializes in gathering, documenting, and validating requirements to ensure business needs are translated into clear, actionable technical solutions.">
+  <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+    <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+      <img src="assets/emily.jpg" alt="Emily Raines" 
+          style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+    </div>
+    <h3>Emily Raines</h3>
+    <p class="text-muted" style="color:#d4ddee;">Customer Solutions Analyst</p>
+  </div>
+</article>
+
   </div>
 </section>
 
