changed names to just the first to be personal

--- a/company.html
+++ b/company.html
@@ -173,7 +173,7 @@
       <img src="assets/virgilprewitt.jpg" alt="Virgil Prewitt" 
            style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
     </div>
-    <h3>Virgil Prewitt</h3>
+    <h3>Virgil</h3>
     <p class="text-muted" style="color:#d4ddee;">Enterprise Architect / Cloud Architectures</p>
   </div>
 </article>
@@ -189,7 +189,7 @@
       <img src="assets/Chet.png" alt="Chet Patel" 
            style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
     </div>
-    <h3>Chet Patel</h3>
+    <h3>Chet</h3>
     <p class="text-muted" style="color:#d4ddee;">CRM Expert &amp; Business Transformations</p>
   </div>
 </article>
@@ -205,7 +205,7 @@
           <img src="assets/tedk.jpg" alt="Ted Klingenberg" 
               style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
         </div>
-        <h3>Ted Klingenberg</h3>
+        <h3>Ted</h3>
         <p class="text-muted" style="color:#d4ddee;">UI / UX Design, Web &amp; Mobile</p>
       </div>
     </article>
@@ -222,7 +222,7 @@
       <img src="assets/ericprewitt.jpg" alt="Eric Prewitt" 
            style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
     </div>
-    <h3>Eric Prewitt</h3>
+    <h3>Eric</h3>
     <p class="text-muted" style="color:#d4ddee;">UI Developer / User Experience</p>
   </div>
 </article>
@@ -238,7 +238,7 @@
       <img src="assets/candaceprewitt.jpg" alt="Candace Prewitt" 
           style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
     </div>
-    <h3>Candace Prewitt</h3>
+    <h3>Candace</h3>
     <p class="text-muted" style="color:#d4ddee;">PMP / Quality Assurance</p>
   </div>
 </article>
@@ -255,7 +255,7 @@
       <img src="assets/emily.jpg" alt="Emily Raines" 
           style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
     </div>
-    <h3>Emily Raines</h3>
+    <h3>Emily</h3>
     <p class="text-muted" style="color:#d4ddee;">Customer Solutions Analyst</p>
   </div>
 </article>
